--- a/inst/rmarkdown/templates/template-rmarkdown/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/template-rmarkdown/skeleton/skeleton.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "Título"
 subtitle: "Subtítulo" 
-author: "Gustavo Sabbag^[Email: gussabbag@gmail.com; Website: gustavosabbag.github.io.]"
+author: "Gustavo Sabbag^[Email: gussabbag@gmail.com; website: gustavosabbag.github.io.]"
 # geometry: "left=3cm,right=2cm,top=3cm,bottom=2cm"
-date: "DCP-UFMG"
+date: "DCP-UFMG/ GIGA Institute"
 thanks: "Trabalho preparado para tal Congresso; ou agradeço a CAPES por me bancar." 
 abstract: |
   \singlespacing Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec arcu sollicitudin, malesuada arcu sit amet, auctor urna. Ut quis massa vitae nisi iaculis commodo. Fusce consequat mauris eget tristique pellentesque. Aliquam ac nisl sit amet metus tempor pellentesque ut accumsan massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lacinia vehicula varius. Praesent congue maximus nibh eget egestas. Suspendisse dapibus non neque sit amet vulputate. Nulla cursus sapien dui, quis blandit tellus auctor placerat. Sed malesuada faucibus nunc, id convallis erat scelerisque tempus. \par 
